# Autonomous-Robot-809T

./: .gitignore  50-cloud-init.yaml  Untitled.ipynb  arrow.py  block_detect.py  capture_image.py  coordinates1.txt  coordinates2.txt  data.py  detect_signal.py  distance.avi  email01.py  encoder.py  encoder04.py  final_video.avi  get_threshold.py  hw1.py  hw3data.txt  hw4data.txt  hw5data.txt  hw6_02.py  hw6_03.py  hw6_04.py  hw7_01.py  hw7_03.py  hw7encoderdata.txt  hw9_02.py  hw9_block_retrival.avi  hw9_block_tracking.avi  imu_01.py  main.py  motor_control_01.py  range02.py  range03.py  range04.py  readme.md  servo.py  test.avi  test.py  test1.py  (+2 more)
.ipynb_checkpoints/: MApping-checkpoint.ipynb
ImageSetMain/: image_0.xml  image_1.xml  image_10.xml  image_11.xml  image_12.xml  image_13.xml  image_14.xml  image_15.xml  image_16.xml  image_2.xml  image_3.xml  image_4.xml  image_5.xml  image_6.xml  image_7.xml  image_8.xml  image_9.xml
Main System/: CAMERA.py  main.py  robot.py  test1.py
TFODRPi-main/: detect.py  labels.txt  test.py
python_files/: MApping.ipynb  blink.py  block_detect.py  calibration.py  detect_qr.py  email01.py  email02.py  encoder.py  encoder02.py  encoder03.py  get_threshold.py  grand_challenge.py  hw6_03.py  hw6_04.py  hw7_03.py  hw8_01.py  hw8_02.py  hw9_01.py  hw9_02.py  imu_01.py  motor_control.py  motor_control_02.py  range01.py  range02.py  range04.py  test1.py  test2.py  test3.py  thread.py
ros2_ws/src/auto_car/: CMakeLists.txt  package.xml  readme.md
ros2_ws/src/auto_car/include/auto_car/: demo_1_interface.hpp  gpio.hpp
ros2_ws/src/auto_car/src/: camera.cpp  demo_1.cpp  gpio.cpp  pi_control.cpp  wiring.cpp
startup/: mail.bash  wifi.bash
test_files/: camera_test.cpp  hello  pin  pwm  pwm.cpp  usb  usb.cpp  wire  wiring.cpp
(+11 files in other folders)
